# yew_patterns

./: .gitignore  Cargo.toml  README.md
examples/directional_message_passing/: Cargo.toml
examples/directional_message_passing/src/: main.rs  receiving_component.rs  sending_component.rs
examples/location/: Cargo.toml
examples/location/src/: main.rs
src/: directional.rs  lib.rs  location_service.rs
